# static_file_util

./: Cargo.toml  README.md
examples/axum/: Cargo.toml  build.rs
examples/axum/src/: main.rs
src/: build_utils.rs  lib.rs  macros.rs
