[package]
name = "static_file_util"
version = "0.2.0"
authors = ["Darren Mothersele <rust@daz.is>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A utility for generating and managing static files in Rust applications."
repository = "https://github.com/crabby-utils/static_file_util"
homepage = "https://github.com/crabby-utils/static_file_util"
documentation = "https://docs.rs/static_file_util"
readme = "README.md"

[features]
process_file = []

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
blake3 = "1"
mime = "0.3"
